// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genTypo should generate custom fonts with spacing 1`] = `
{
  "fontFamily": "FooFont",
  "fontSize": 28,
  "letterSpacing": 0.56,
  "lineHeight": 32,
}
`;

exports[`genTypo should generate default fonts with spacing 1`] = `
{
  "fontSize": 28,
  "letterSpacing": 0.56,
  "lineHeight": 32,
}
`;

exports[`genTypo should generate default fonts without spacing 1`] = `
{
  "fontSize": 28,
  "letterSpacing": 0,
  "lineHeight": 32,
}
`;
